# Android_Studio_Import_so_Demo

./: README.md
import_so/: settings.gradle
import_so/app/: build.gradle
import_so/app/src/androidTest/java/com/bytedance/importso/: ExampleInstrumentedTest.java
import_so/app/src/main/: AndroidManifest.xml  CMakeLists.txt
import_so/app/src/main/cpp/: jni_src.cpp
import_so/app/src/main/cpp/include/: adder.h
import_so/app/src/main/java/com/bytedance/importso/: MainActivity.java
import_so/app/src/main/res/values/: strings.xml
import_so/app/src/test/java/com/bytedance/importso/: ExampleUnitTest.java
import_so/gradle/wrapper/: gradle-wrapper.properties
native_proj/: CMakeLists.txt  android_build.sh  build_test.sh
native_proj/src/: adder.cpp
